--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-set(CMAKE_CXX_FLAGS "-std=c++11 -O3")
+set(CMAKE_CXX_FLAGS "-std=c++11 -O3  -mavx2")
 #set(CMAKE_CXX_FLAGS "-std=c++11 -O3 -ffast-math -mavx2")
 message(STATUS "**************Build type: ${CMAKE_BUILD_TYPE}************")
 
